--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ESNext",
         "lib": ["esnext"],
         "allowJs": false,
-        "module": "commonjs",
+        "module": "ESNext",
         "moduleResolution": "node",
         "noImplicitAny": false,
         "skipLibCheck": true,
