--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "pre-commit": "pnpm lint-staged"
   },
   "lint-staged": {
-    "*.{js,ts?(x)}": [
-      "eslint --fix"
+    "*.{js,json,yaml}": [
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "eslint --fix",
+      "prettier --parser=typescript --write"
+    ],
+    "*.yaml": [
+      "prettier --parser=yaml --write"
     ]
   },
   "keywords": [],
@@ -25,6 +32,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "lint-staged": "^13.2.3",
+    "prettier": "^2.8.8",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^5.1.5"
   }
