--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lint-staged": "^13.2.3",
     "prettier": "^2.8.8",
     "simple-git-hooks": "^2.8.1",
-    "typescript": "^5.1.5"
+    "typescript": "^5.1.5",
+    "@types/node": "^20.3.2"
   }
 }
