--- a/packages/mini-webpack/package.json
+++ b/packages/mini-webpack/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "caifeng01",
@@ -14,6 +14,10 @@
     "@babel/parser": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/traverse": "^7.22.5",
+    "ejs": "^3.1.9",
     "tapable": "^2.2.1"
+  },
+  "devDependencies": {
+    "@types/ejs": "^3.1.2"
   }
 }
